Add and change stuff... idk...